tests/ui/diagnostic-not-implemented-known-layout.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: KnownLayout` is not satisfied
  --> $DIR/diagnostic-not-implemented-known-layout.rs:17:26
   |
17 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_known_layout`
  --> $DIR/diagnostic-not-implemented-known-layout.rs:21:26
   |
21 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
